# bus-route-builder

./: .dockerignore  .env  .gitignore  README.md  cleaned_notebook.ipynb  commands.txt  docker-compose.yaml  dockerfile  final_notebook.ipynb  model_jerarquic.ipynb  pyproject.toml  requirements.txt  tercer_model.ipynb  vpr_notebook.ipynb
app/: main.py
app/context_manager/: app_lifespan.py
app/data/: permafrost.csv
app/factory/: create_app.py
app/http_model/: request.py  response.py
app/model/: abstract_base_class.py  adapter.py  handler.py  service.py
app/optimizer/: optimizer.py
app/routes/builder_router/: builder_router.py
app/routes/frontend_router/: frontend_router.py
app/routes/health_router/: health_router.py
app/routes/info_router/: info_router.py
app/src/: routing.py
app/utils/: distance.py  geodata_functions.py  soft_colors.py  utils.py
app/visualizer/: plots.py
deployment/: deployment.yaml  service.yaml
scripts/: script.sh
streamlit_app/: map_viewer.py
